--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
 textarea[name="user-input"] {
 
   letter-spacing: 1px;
+  text-align: center;
   padding: 10px;
   max-width: 100%;
   line-height: 1.5;
